--- a/index.html
+++ b/index.html
@@ -1,25 +1,64 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title> Faisal's Portfoliio </title>
+
+	<!--style sheet links with the below statement-->
+	<link rel="stylesheet" type="text/css" href="style.css">
+
+	<title> Faisal's Portfolio </title>
 </head>
 
-<!-- this is a comment -->
+
+
+<!-- nav links -->
+<nav>
+  <a href="index.html">About</a> |
+  <a href="contact.html">Contact</a> |
+  <a href="portfolio.html">Portfolio</a> |
+  
+</nav>
+
 
 <body> 
-<h1>FAISAL NARSI</h1>
-<H1>About Me</H1>
-<img src="me.jpg" width="200" height="200">
-<p> I am currently working as an Apple Repair Technician. The broad spectrum of my skills have been developed over 10 years of diverse experience, from The Home Depot to the TX Department of Corrections. I possess hands on experience in hardware IT sector including computer technician, computer sales, CCTV installer and POS installer. Currently looking to strengthen my software skills, I am in search for an Internship or an entry-level developers position that will help take my elementary understanding of multiple languages to an expert level, with the ultimate goal of being able to call myself a developer.
+
+	<div id="mee">
+
+	<h1> FAISAL NARSI </h1>
+
+	<img src="me.jpg" width="200" height="200">
+		
+	</div>
+
+	
+
+	 <div id= "Connect with me"; align=right>
+
+
+
+    <h3>Connect With Me </h3> 
+
+	<img id="git" src="git.png"> <a href="https://github.com/FaisalNarsi"></a>
+
+	<img id="linked" src="linked.png"><a href="https://www.linkedin.com/in/faisal-narsi-2805a449"></a>
+
+	<img id= "stack" src="stack.png"> <a href="http://stackoverflow.com/users/6875937/faisal-n  "></a>
+
+	
+	</div>	
+
+	
+	<h2> About Me </h2> 
+	
+
+<p> 
+	I am going on 30, I had a daughter 4 months ago, I love motorcycles and I am making a career change! I finished by Bachelors of Science in Criminal Justice from University of Houston - Downtown. After working in the field I decided against it right away and quickly went towards building websites. I started using the Adobe suite to design and build with the help of Dreamweaver and company. Along with CMS theme editing and designing logos, I quickly decided that I need to get certifications and/or proper knowledge of what ever it is I may want to pursue. 
+
+	After 2 years and a kid, my head is full of information about the IoT, and its cousins. From you tube tutorials, forms, and friends I quickly decided to pursue software development. Currently I am an Apple Technician for CSAT Solutions and a student at the Hosuton Coding Bootcamp - UT Austin. 
+
 </p>  
 
-<h2>Connect with me </h2>
-<img src="">
-<img src="">
-<img src="">
+   
 
-<a href=""></a>
-<a href=""></a>
-<a href=""></a>
-<footer> &#169; Copyright Fasial 2016</footer>
+	<footer>  &#169; Copyright Fasial 2016</footer>
 </body>
+
